--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -10,6 +10,14 @@ else
 MPLAYER_LIBS = 
 endif
 
+if ENABLE_MSERVER_AS
+MSERVER_LIBS = $(top_builddir)/src/Server/libServer.a
+MSERVER_BINS = fgmp
+else
+MSERVER_LIBS = 
+MSERVER_BINS = 
+endif
+
 if ENABLE_NETWORK_OLK
 NETWORK_LIBS = $(top_builddir)/src/NetworkOLK/libNetworkOLK.a
 else
@@ -40,7 +48,7 @@ AM_CXXFLAGS = -DPKGLIBDIR=\"$(pkglibdir)\"
 
 EXTRA_DIST = 3dfx.sh runfgfs.in runfgfs.bat.in
 
-bin_PROGRAMS = fgfs
+bin_PROGRAMS = fgfs $(MSERVER_BINS)
 
 noinst_SCRIPTS = runfgfs.bat runfgfs
 
@@ -109,5 +117,13 @@ fgfs_LDADD = \
 	-lz \
 	$(opengl_LIBS) \
 	$(audio_LIBS)
+
+if ENABLE_MSERVER_AS
+
+fgmp_SOURCES = bootstrap.cxx
+
+fgmp_LDADD = $(fgfs_LDADD) $(MSERVER_LIBS)
+
+endif
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
