Add Manuel Bessler and Stephen Lowry's remote joystick code and add David Magginson's 3dconvert utility

--- a/configure.ac
+++ b/configure.ac
@@ -553,6 +553,8 @@ AC_CONFIG_FILES([ \
 	tests/Makefile \
 	utils/Makefile \
 	utils/TerraSync/Makefile \
+	utils/js_server/Makefile \
+	utils/3dconvert/Makefile \
 ])
 AC_OUTPUT
 
