--- a/docs-mini/README.properties
+++ b/docs-mini/README.properties
@@ -119,7 +119,9 @@ Seat
 ----
 /controls/seat/vertical-adjust
 /controls/seat/fore-aft-adjust
-/controls/seat/eject
+/controls/seat/cmd_selector_valve
+/controls/seat/eject[%d]/initiate
+/controls/seat/eject[%d]/status
 
 APU
 ---
