--- a/utils/3dconvert/Makefile.am
+++ b/utils/3dconvert/Makefile.am
@@ -1,4 +1,4 @@
 bin_PROGRAMS = 3dconvert
 
 3dconvert_SOURCES = 3dconvert.cxx
-3dconvert_LDADD = -lplibssg -lplibsg -lplibul $(opengl_LIBS)
+3dconvert_LDADD = -lplibssg -lplibsg -lplibul $(opengl_LIBS) $(audio_LIBS)
