--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libObjects.a
 
-libObjects_a_SOURCES = \
-	ssgEntityArray.hxx ssgEntityArray.cxx
+libObjects_a_SOURCES = 
+
+#	ssgEntityArray.hxx ssgEntityArray.cxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
