Add David Culp's AI model manager code which is derived from David Luff's AI/ATC code.

--- a/configure.ac
+++ b/configure.ac
@@ -505,6 +505,7 @@ AC_CONFIG_FILES([ \
 	src/Main/runfgfs \
 	src/Main/runfgfs.bat \
 	src/Model/Makefile \
+	src/AIModel/Makefile \
 	src/MultiPlayer/Makefile \
 	src/Navaids/Makefile \
 	src/Network/Makefile \
