--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,7 @@ SUBDIRS = \
         Input \
 	Instrumentation \
         Model \
+	AIModel \
         Navaids \
         Network \
 	$(MPLAYER_DIRS) \
