Add Nasal Vs. 1.5

--- a/src/Scripting/Makefile.am
+++ b/src/Scripting/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LIBRARIES = libScripting.a
 
-libScripting_a_SOURCES = NasalSys.cxx NasalSys.hxx
+libScripting_a_SOURCES = NasalSys.cxx NasalSys.hxx nasal-props.cxx
 # libScripting_a_SOURCES = scriptmgr.cxx scriptmgr.hxx NasalSys.cxx NasalSys.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
