Comment out the rest of the Makefile to make the compierl happy

--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -1,7 +1,6 @@
-noinst_LIBRARIES = libObjects.a
+#noinst_LIBRARIES = libObjects.a
 
-libObjects_a_SOURCES = 
-
+#libObjects_a_SOURCES = 
 #	ssgEntityArray.hxx ssgEntityArray.cxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
