Add FDM specific properties

--- a/docs-mini/README.properties
+++ b/docs-mini/README.properties
@@ -1,3 +1,6 @@
+================================================================================
+CONTROLS
+================================================================================
 
 Flight Controls
 ---------------
@@ -141,4 +144,56 @@ Autoflight
 /controls/autoflight/mach-select
 /controls/autoflight/vertical-mode
 /controls/autoflight/lateral-mode
+
+================================================================================
+FDM (Aircraft settings)
+================================================================================
+
+Position
+---------------
+/position/latitude-deg
+/position/latitude-deg
+/position/longitude-deg
+/position/altitude-ft
+
+Orientation
+-----------
+/orientation/roll-deg
+/orientation/pitch-deg
+/orientation/pitch-deg
+/orientation/heading-deg
+
+/orientation/roll-rate-degps
+/orientation/pitch-rate-degps
+/orientation/yaw-rate-degps
+
+Velocities
+----------
+/velocities/airspeed-kt
+/velocities/mach
+/velocities/speed-north-fps
+/velocities/speed-east-fps
+/velocities/speed-down-fps
+
+/velocities/uBody-fps
+/velocities/uBody-fps
+/velocities/vBody-fps
+/velocities/wBody-fps
+
+/velocities/vertical-speed-fps
+/velocities/glideslope
+/orientation/side-slip-rad
+/orientation/side-slip-deg
+/orientation/alpha-deg
+/accelerations/nlf
+
+/accelerations/ned/north-accel-fps_sec
+/accelerations/ned/east-accel-fps_sec
+/accelerations/ned/down-accel-fps_sec
+
+Acceleration
+------------
+/accelerations/pilot/x-accel-fps_sec
+/accelerations/pilot/y-accel-fps_sec
+/accelerations/pilot/z-accel-fps_sec
 
