Rename utils/3dconvert to utils/Modeller and add Jim Wilson's animassist utility

--- a/utils/Modeller/Makefile.am
+++ b/utils/Modeller/Makefile.am
@@ -1,4 +1,7 @@
-bin_PROGRAMS = 3dconvert
+noinst_PROGRAMS = 3dconvert animassist
 
 3dconvert_SOURCES = 3dconvert.cxx
 3dconvert_LDADD = -lplibssg -lplibsg -lplibul $(opengl_LIBS) $(audio_LIBS)
+
+animassist_SOURCES = animassist.c
+
