--- a/configure.ac
+++ b/configure.ac
@@ -520,8 +520,8 @@ AC_CONFIG_FILES([ \
 	tests/Makefile \
 	utils/Makefile \
 	utils/TerraSync/Makefile \
+	utils/Modeller/Makefile \
 	utils/js_server/Makefile \
-	utils/3dconvert/Makefile \
 ])
 AC_OUTPUT
 
