Add the math library for architextures that needs it

--- a/utils/Modeller/Makefile.am
+++ b/utils/Modeller/Makefile.am
@@ -4,4 +4,4 @@ noinst_PROGRAMS = 3dconvert animassist
 3dconvert_LDADD = -lplibssg -lplibsg -lplibul $(opengl_LIBS) $(audio_LIBS)
 
 animassist_SOURCES = animassist.c
-
+animassist_LDADD = $(base_LIBS)
