Document support for formation-lights

--- a/docs-mini/README.properties
+++ b/docs-mini/README.properties
@@ -100,6 +100,7 @@ Lights
 ------
 /controls/lighting/landing-lights
 /controls/lighting/turn-off-lights
+/controls/lighting/formation-lights
 /controls/lighting/taxi-light
 /controls/lighting/logo-lights
 /controls/lighting/nav-lights
