Add Melchior FRANZ's metar class. It is not yet used anywhere (but in the resulting metar executable), but it makes adding live weather quite easy.

--- a/src/Environment/Makefile.am
+++ b/src/Environment/Makefile.am
@@ -4,8 +4,19 @@
 
 noinst_LIBRARIES = libEnvironment.a
 
-libEnvironment_a_SOURCES = environment.cxx environment.hxx \
-	                   environment_mgr.cxx environment_mgr.hxx \
-                           environment_ctrl.cxx environment_ctrl.hxx
+libEnvironment_a_SOURCES = \
+	environment.cxx environment.hxx \
+	environment_mgr.cxx environment_mgr.hxx \
+	environment_ctrl.cxx environment_ctrl.hxx \
+	metar.cxx metar.hxx
+
+bin_PROGRAMS = metar
+
+metar_SOURCES = metar-main.cxx metar.cxx metar.hxx
+
+metar_LDADD = \
+	-lsgio -lsgbucket -lsgmisc -lsgstructure -lsgdebug \
+	-lplibnet -lplibul \
+	-lz $(base_LIBS)
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
