--- a/src/Autopilot/Makefile.am
+++ b/src/Autopilot/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libAutopilot.a
 
 libAutopilot_a_SOURCES = \
 	auto_gui.cxx auto_gui.hxx \
-	newauto.cxx newauto.hxx
+	route_mgr.cxx route_mgr.hxx \
+	xmlauto.cxx xmlauto.hxx
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
