Update the FDM section to expose the engine/thruster related internal properties.

--- a/docs-mini/README.properties
+++ b/docs-mini/README.properties
@@ -198,3 +198,38 @@ Acceleration
 /accelerations/pilot/y-accel-fps_sec
 /accelerations/pilot/z-accel-fps_sec
 
+Engines
+-------
+
+common:
+/engines/engine[%d]/fuel-flow-gph
+/engines/engine[%d]/fuel-flow_pph
+/engines/engine[%d]/thrust_lb
+/engines/engine[%d]/running
+/engines/engine[%d]/starter
+/engines/engine[%d]/cranking
+
+piston:
+/engines/engine[%d]/mp-osi
+/engines/engine[%d]/egt-degf
+/engines/engine[%d]/oil-temperature-degf
+/engines/engine[%d]/oil-pressure-psi
+/engines/engine[%d]/cht-degf
+/engines/engine[%d]/rpm
+
+turbine:
+/engines/engine[%d]/n1
+/engines/engine[%d]/n2
+/engines/engine[%d]/epr
+/engines/engine[%d]/augmentation
+/engines/engine[%d]/water-injection
+/engines/engine[%d]/ignition
+/engines/engine[%d]/nozzle-pos-norm
+/engines/engine[%d]/inlet-pos-norm
+/engines/engine[%d]/reversed
+/engines/engine[%d]/cutoff
+
+propeller:
+/engines/engine[%d]/rpm
+/engines/engine[%d]/pitch
+/engines/engine[%d]/torque
