--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ dnl Require at least automake 2.52
 AC_PREREQ(2.52)
 
 dnl Initialize the automake stuff
-AM_INIT_AUTOMAKE(FlightGear, 0.9.4.pre1)
+AM_INIT_AUTOMAKE(FlightGear, 0.9.4.pre2)
 
 dnl Checks for programs.
 AC_PROG_MAKE_SET
@@ -91,7 +91,7 @@ fi
 dnl Used by JSBSim to conditionally compile in fgfs interface code
 AC_DEFINE([FGFS], 1, [Define so that JSBSim compiles in 'library' mode])
 
-dnl Used to controll whether clouds3d should be compiled in or not
+dnl Used to control whether clouds3d should be compiled in or not
 AC_DEFINE([FG_USE_CLOUDS_3D], 1, [Define to use 3D cloud support])
 AM_CONDITIONAL(FG_USE_CLOUDS_3D, test "x" = "x")
 
