Yank out all the glut dependencies and concentrate them in a (easily reimplementable) Main/fg_os.cxx file.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -40,7 +40,8 @@ libMain_a_SOURCES = \
 	splash.cxx splash.hxx \
 	util.cxx util.hxx \
 	viewer.cxx viewer.hxx \
-	viewmgr.cxx viewmgr.hxx
+	viewmgr.cxx viewmgr.hxx \
+	fg_os.cxx fg_os.hxx
 
 fgfs_SOURCES = bootstrap.cxx
 
