--- a/src/Instrumentation/Makefile.am
+++ b/src/Instrumentation/Makefile.am
@@ -32,6 +32,7 @@ libInstrumentation_a_SOURCES = \
 	dclgps.cxx dclgps.hxx \
 	render_area_2d.cxx render_area_2d.hxx        \
 		groundradar.cxx groundradar.hxx \
-		agradar.cxx agradar.hxx rad_alt.cxx rad_alt.hxx
+		agradar.cxx agradar.hxx rad_alt.cxx rad_alt.hxx \
+	rnav_waypt_controller.cxx rnav_waypt_controller.hxx \
 
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_builddir)/src
