MapWidget for the GUI, initial commit.

--- a/projects/VC90/FlightGear/FlightGear.vcproj
+++ b/projects/VC90/FlightGear/FlightGear.vcproj
@@ -2647,6 +2647,8 @@
 			</File>
 			<File RelativePath="..\..\..\src\GUI\WaypointList.cxx"></File>
 			<File RelativePath="..\..\..\src\GUI\WaypointList.hxx"></File>
+			<File RelativePath="..\..\..\src\GUI\MapWidget.cxx"></File>
+			<File RelativePath="..\..\..\src\GUI\MapWidget.hxx"></File>
 		</Filter>
 		<Filter
 			Name="Lib_Input"
