--- a/src/GUI/Makefile.am
+++ b/src/GUI/Makefile.am
@@ -23,7 +23,8 @@ libGUI_a_SOURCES = \
         property_list.cxx property_list.hxx \
         layout.cxx layout-props.cxx layout.hxx \
         SafeTexFont.cxx SafeTexFont.hxx \
-        WaypointList.cxx WaypointList.hxx
+        WaypointList.cxx WaypointList.hxx \
+        MapWidget.cxx MapWidget.hxx
         
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
 
