--- a/projects/VC7.1/FlightGear.vcproj
+++ b/projects/VC7.1/FlightGear.vcproj
@@ -1828,6 +1828,8 @@
 			</File>
 			<File RelativePath="..\..\..\src\GUI\WaypointList.cxx"></File>
 			<File RelativePath="..\..\..\src\GUI\WaypointList.hxx"></File>
+			<File RelativePath="..\..\..\src\GUI\MapWidget.cxx"></File>
+			<File RelativePath="..\..\..\src\GUI\MapWidget.hxx"></File>
 		</Filter>
 		<Filter
 			Name="Lib_Input"
