--- a/projects/VC90/metar/metar.vcproj
+++ b/projects/VC90/metar/metar.vcproj
@@ -223,7 +223,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="sg.lib ul.lib net.lib ws2_32.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="..\..\..\..\plib"
+				AdditionalLibraryDirectories="..\..\..\..\3rdParty\lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
